--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,6 +7,7 @@
   display: flex;
   flex: 1;
   height: 100vh;
+  overflow: hidden;
 }
 
 .navbar-container {
